[package]
authors = ["Jesper Håkansson <jesper@jesperh.se>"]
name = "caudices"
version = "0.1.0"

[dependencies]
cfg-if = "0.1.6"
console_error_panic_hook = "0.1.5"
futures = "0.1.25"
ncollide2d = "0.17.1"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.32"
stdweb = "0.4.10"
time = "0.1.40"
wasm-bindgen = "0.2.25"

[dependencies.quicksilver]
features = ["collisions"]
version = "0.3.2"

[dependencies.specs]
default-features = false
version = "0.14.0"
