[package]
authors = ["Jesper Håkansson <jesper@jesperh.se>"]
name = "caudices"
version = "0.1.0"

[dependencies]
cfg-if = "0.1.6"
console_error_panic_hook = "0.1.5"
futures = "0.1.25"
hibitset = "0.5.3"
ncollide2d = "0.17.1"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.32"
stdweb = "0.4.10"
time = "0.1.40"
wasm-bindgen = "0.2.25"
log = "0.4.6"
env_logger = "0.6.1"
console_log = "0.1.2"

[dependencies.quicksilver]
features = ["collisions"]
version = "0.3.7"

[dependencies.specs]
default-features = false
version = "0.14.0"

[dependencies.nalgebra]
features = ["serde-serialize"]
version = "0.16.10"
